2002-05-31  Glynn Foster <glynn.foster@sun.com>
	
	* Makefile.am: Enable help again. Fixes #83518.

2002-05-25  Glynn Foster <glynn.foster@sun.com>

	* logview.c, actions.c: Some focus issues. Hum, we really
	need to get mnemonics going here.

2002-05-25  Narayana Pattipati <narayana.pattipati@wipro.com>

	* logview.c: Treeview fix to prevent parent and child being
	created for first action entry. Fixes #81942.

2002-05-23  Aruna P R <aruna.pou@wipro.com>

	* logview.c: Disable multiple openings of the same file. Fixes 
	#75121.

2002-05-23  Narayana Pattipati <narayana.pattipati@wipro.com>

	* actions.c: Make sure we save the description in the actions
	dialog. Fixes #82334.

2002-15-20 Glynn Foster <glynn.foster@sun.com>

	* Makefile.am: Diable docs until they are fixed - dtd validation
	problems with scrollkeeper.dtd.

Fri May 17 10:09:46 2002  George Lebl <jirka@5z.com>

	* config.c: add note to translators about fonts, especially about
	  Helvetica vs asian fonts

	* info.c, zoom.c: fix crashes on window closing, also add more
	  elaborate logic for figuring out the size of the label area,
	  still quite stupid, but now it gets it wrong by getting more space
	  rather then less which is nicer.  Also better get single char
	  width info in an uglier, more elaborate and hackish way but
	  in a way that we get more correct.  Some more geometry fixage
	  to get asian fonts right.

Thu May 16 18:39:42 2002  George Lebl <jirka@5z.com>

	* info.c, log_repaint.c, logview.h, misc.c, zoom.c:
	  handle cases where we can't convert the line to utf8.  We can
	  really guess the language anyway though so maybe we could do more.

	* logrtns.c: make sure not to leave other time locales around and
	  fix a leak thus created.

Thu May 16 18:19:59 2002  George Lebl <jirka@5z.com>

	* info.c, log_repaint.c, logrtns.c, logview.h, misc.c, zoom.c:
	  Some i18n fixage, especially with getting utf8 vs locale
	  encoding straight.  It is quite ugly, though now we again read