@@ -1,4 +1,9 @@
 2002-05-31  Glynn Foster <glynn.foster@sun.com>
+
+	* monitor.c: Remove ugly pangoification in the 
+	monitor dialog.
+
+2002-05-31  Glynn Foster <glynn.foster@sun.com>
 	
 	* Makefile.am: Enable help again. Fixes #83518.
 
